
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int ENOMEM ;
 int GFP_ATOMIC ;
 int core_restore_code ;
 scalar_t__ get_safe_page (int ) ;
 int memcpy (void*,int *,int) ;
 void* relocated_restore_code ;
 int restore_image () ;
 int restore_registers ;
 int set_up_temporary_mappings () ;

int swsusp_arch_resume(void)
{
 int error;


 if ((error = set_up_temporary_mappings()))
  return error;

 relocated_restore_code = (void *)get_safe_page(GFP_ATOMIC);
 if (!relocated_restore_code)
  return -ENOMEM;
 memcpy(relocated_restore_code, &core_restore_code,
        &restore_registers - &core_restore_code);

 restore_image();
 return 0;
}
